crates/agentscript-compiler/src/hir/snapshots/agentscript_compiler__hir__ast_lower__tests__golden_block_user_function_body.snap
---
source: crates/agentscript-compiler/src/hir/ast_lower.rs
expression: "c.session.hir.as_ref().expect(\"hir\")"
---
HirScript {
    version: 6,
    declaration: Indicator {
        title: Some(
            "block fn",
        ),
    },
    inputs: [],
    exprs: [
        Variable(
            SymbolId(
                0,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
        UserCall {
            callee: SymbolId(
                1,
            ),
            args: [
                HirId(
                    0,
                ),
            ],
            ty: Series(
                Primitive(
                    Float,
                ),
            ),
        },
        Variable(
            SymbolId(
                2,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
        Variable(
            SymbolId(
                3,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
        Literal(
            Float(
                3.0,
            ),
            Simple(
                Primitive(
                    Float,
                ),
            ),
        ),
        Binary {
            op: Mul,
            lhs: HirId(
                3,
            ),
            rhs: HirId(
                4,
            ),
            ty: Series(
                Primitive(
                    Float,
                ),
            ),
        },
        Variable(
            SymbolId(
                4,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
    ],
    body: [
        Let {
            symbol: SymbolId(
                2,
            ),
            value: HirId(
                1,
            ),
        },
        Plot {
            expr: HirId(
                2,
            ),
            title: None,
        },
    ],
    user_functions: [
        HirUserFunction {
            symbol: SymbolId(
                1,
            ),
            params: [
                SymbolId(
                    3,
                ),
            ],
            body_stmts: [
                Let {
                    symbol: SymbolId(
                        4,
                    ),
                    value: HirId(
                        5,
                    ),
                },
            ],
            result: HirId(
                6,
            ),
        },
    ],
    symbols: SymbolTable {
        names: [
            "close",
            "g",
            "z",
            "a",
            "t",
        ],
    },
}
