crates/agentscript-compiler/src/hir/snapshots/agentscript_compiler__hir__ast_lower__tests__golden_ta_ema_indicator.snap
---
source: crates/agentscript-compiler/src/hir/ast_lower.rs
assertion_line: 927
expression: "c.session.hir.as_ref().expect(\"hir\")"
---
HirScript {
    version: 6,
    declaration: Indicator {
        title: Some(
            "EMA pipeline",
        ),
    },
    inputs: [
        HirInputDecl {
            name: "len",
            default_int: 14,
        },
    ],
    exprs: [
        Variable(
            SymbolId(
                0,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
        Variable(
            SymbolId(
                1,
            ),
            Simple(
                Primitive(
                    Int,
                ),
            ),
        ),
        BuiltinCall {
            kind: TaEma,
            args: [
                HirId(
                    0,
                ),
                HirId(
                    1,
                ),
            ],
            ty: Series(
                Primitive(
                    Float,
                ),
            ),
        },
        Variable(
            SymbolId(
                2,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
    ],
    body: [
        Let {
            symbol: SymbolId(
                2,
            ),
            value: HirId(
                2,
            ),
        },
        Plot {
            expr: HirId(
                3,
            ),
            title: None,
        },
    ],
    user_functions: [],
    symbols: SymbolTable {
        names: [
            "close",
            "len",
            "ema",
        ],
    },
}
