crates/agentscript-compiler/src/hir/snapshots/agentscript_compiler__hir__ast_lower__tests__golden_tiny_indicator_pipeline.snap
---
source: crates/agentscript-compiler/src/hir/ast_lower.rs
expression: "c.session.hir.as_ref().expect(\"hir\")"
---
HirScript {
    version: 6,
    declaration: Indicator {
        title: Some(
            "Test Agent",
        ),
    },
    inputs: [
        HirInputDecl {
            name: "len",
            kind: Int(
                14,
            ),
        },
    ],
    exprs: [
        Variable(
            SymbolId(
                0,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
        Variable(
            SymbolId(
                1,
            ),
            Simple(
                Primitive(
                    Int,
                ),
            ),
        ),
        BuiltinCall {
            kind: TaSma,
            args: [
                HirId(
                    0,
                ),
                HirId(
                    1,
                ),
            ],
            ty: Series(
                Primitive(
                    Float,
                ),
            ),
        },
        Literal(
            String(
                "AAPL",
            ),
            Simple(
                Primitive(
                    String,
                ),
            ),
        ),
        Literal(
            String(
                "D",
            ),
            Simple(
                Primitive(
                    String,
                ),
            ),
        ),
        Variable(
            SymbolId(
                2,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
        Security(
            SecurityCall {
                symbol: HirId(
                    3,
                ),
                timeframe: HirId(
                    4,
                ),
                expression: HirId(
                    5,
                ),
                gaps: NoGaps,
                lookahead: Off,
                ty: Series(
                    Primitive(
                        Float,
                    ),
                ),
            },
        ),
        Variable(
            SymbolId(
                3,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
    ],
    body: [
        Let {
            symbol: SymbolId(
                2,
            ),
            value: HirId(
                2,
            ),
        },
        Let {
            symbol: SymbolId(
                3,
            ),
            value: HirId(
                6,
            ),
        },
        Plot {
            expr: HirId(
                7,
            ),
            title: None,
        },
    ],
    user_functions: [],
    symbols: SymbolTable {
        names: [
            "close",
            "len",
            "sma",
            "htf",
        ],
    },
    persist_symbols: {},
}
