crates/agentscript-compiler/src/hir/snapshots/agentscript_compiler__hir__ast_lower__tests__golden_user_fn_and_conditional_plot.snap
---
source: crates/agentscript-compiler/src/hir/ast_lower.rs
expression: "c.session.hir.as_ref().expect(\"hir\")"
---
HirScript {
    version: 6,
    declaration: Indicator {
        title: Some(
            "UF",
        ),
        timeframe: None,
    },
    inputs: [],
    exprs: [
        Variable(
            SymbolId(
                7,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
        Literal(
            Float(
                2.0,
            ),
            Simple(
                Primitive(
                    Float,
                ),
            ),
        ),
        Binary {
            op: Mul,
            lhs: HirId(
                0,
            ),
            rhs: HirId(
                1,
            ),
            ty: Series(
                Primitive(
                    Float,
                ),
            ),
        },
        Variable(
            SymbolId(
                0,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
        UserCall {
            callee: SymbolId(
                6,
            ),
            args: [
                HirId(
                    3,
                ),
            ],
            ty: Series(
                Primitive(
                    Float,
                ),
            ),
        },
        Literal(
            Bool(
                true,
            ),
            Simple(
                Primitive(
                    Bool,
                ),
            ),
        ),
        Variable(
            SymbolId(
                8,
            ),
            Series(
                Primitive(
                    Float,
                ),
            ),
        ),
    ],
    body: [
        Let {
            symbol: SymbolId(
                8,
            ),
            value: HirId(
                4,
            ),
        },
        If {
            cond: HirId(
                5,
            ),
            then_branch: [
                Plot {
                    expr: HirId(
                        6,
                    ),
                    title: None,
                },
            ],
            else_branch: None,
        },
    ],
    user_functions: [
        HirUserFunction {
            symbol: SymbolId(
                6,
            ),
            params: [
                SymbolId(
                    7,
                ),
            ],
            body_stmts: [],
            result: HirId(
                2,
            ),
        },
    ],
    symbols: SymbolTable {
        names: [
            "close",
            "open",
            "high",
            "low",
            "volume",
            "time",
            "f",
            "x",
            "y",
        ],
    },
    persist_symbols: {},
}
